# cadquery

./: pyproject.toml
cadquery/: assembly.py
cadquery/occ_impl/: assembly.py  solver.py
cadquery/occ_impl/exporters/: assembly.py
tests/: test_assembly.py
