[tool.poetry]
name = "cadquery"
version = "2.5.2"
description = "CadQuery is a parametric scripting language for creating and traversing CAD models"
authors = ["David Cowden <dave.cowden@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/CadQuery/cadquery"
repository = "https://github.com/CadQuery/cadquery"
documentation = "https://github.com/CadQuery/cadquery"
keywords = ["CAD", "parametric", "scripting", "models"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
]
packages = [
    { include = "cadquery", from = "./" }
]


[tool.poetry.dependencies]
python = ">=3.10, <4"
cadquery-ocp = "*"
ezdxf = "*"
multimethod = ">=1.11,<2.0"
nptyping = "==2.0.1"
typish = "*"
casadi = "*" # ">=3,<4,!=3.6.6"
path = "*"
nlopt = ">=2.9.0,<3.0"
numpy = "*"
docutils = { version = "*", optional = true }
ipython = { version = "*", optional = true }
pytest = { version = "*", optional = true }
black = { version = "19.10b0", optional = true }
click = { version = "8.0.4", optional = true }


[tool.poetry.extras]
dev = ["docutils", "ipython", "pytest", "black", "click"]
ipython = ["ipython"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
